# ifco-digital-repo-templating

./: README.md
frontend-project-template/: cookiecutter.json
frontend-project-template/{{cookiecutter.project_slug}}/: .dockerignore  .env.dist  .gitignore  .pre-commit-config.yaml  .yamlfmt  .yamllint  Dockerfile  README.md  app.yaml  docker-compose.yaml  pyproject.toml
frontend-project-template/{{cookiecutter.project_slug}}/.streamlit/: config.toml
frontend-project-template/{{cookiecutter.project_slug}}/scripts/: build.sh  run_tests.sh
frontend-project-template/{{cookiecutter.project_slug}}/src/backend/: sum.py
frontend-project-template/{{cookiecutter.project_slug}}/src/common/: logger.py  yaml_parser.py
frontend-project-template/{{cookiecutter.project_slug}}/src/frontend/: app.py
frontend-project-template/{{cookiecutter.project_slug}}/src/frontend/.streamlit/: config.toml
frontend-project-template/{{cookiecutter.project_slug}}/src/frontend/components/: side_bar.py  sidebar.py
frontend-project-template/{{cookiecutter.project_slug}}/src/frontend/misc/: page_config.py
frontend-project-template/{{cookiecutter.project_slug}}/src/frontend/models/: sidebar.py
frontend-project-template/{{cookiecutter.project_slug}}/src/frontend/page/: home.py
frontend-project-template/{{cookiecutter.project_slug}}/tests/: test_example.py
frontend-project-template/{{cookiecutter.project_slug}}/tests/test_utils/: test_example.py
python-vanilla-project-template/: cookiecutter.json
python-vanilla-project-template/{{cookiecutter.project_slug}}/: .python-version  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
python-vanilla-project-template/{{cookiecutter.project_slug}}/.github/workflows/: cicd.yaml
python-vanilla-project-template/{{cookiecutter.project_slug}}/config/: main.yaml
python-vanilla-project-template/{{cookiecutter.project_slug}}/scripts/: build.sh
